--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,7 @@
     var(--color-primary--s),
     var(--color-primary--l)
   );
-  --color-primary--dark: hsl(
-    from var(--color-primary) h s calc(var(--color-primary--l) - 15%)
-  );
-  --color-primary--black: hsl(from var(--color-primary) h s 4%);
+  --color-text: hsl(from var(--color-primary) h s 4%);
 
   /* Accent */
   --color-accent--h: calc(var(--color-primary--h) + 200);
@@ -59,10 +56,11 @@
       var(--color-primary--s),
       var(--color-primary--l)
     );
+    --color-text: hsl(from var(--color-primary) h 10% 85%);
 
     /* Accent */
     --color-accent--h: calc(var(--color-primary--h) + 200);
-    --color-accent--l: calc(var(--color-primary--l) + 32%);
+    --color-accent--l: calc(var(--color-primary--l) + 42%);
 
     --color-accent: hsl(
       from var(--color-primary) var(--color-accent--h) s var(--color-accent--l)
